Minor CSS fixes. Overflow fixed and scroll bar removed

--- a/client/src/components/MainPageComponent/AnalyticsComponent/QuestionComponent/Questions.module.css
+++ b/client/src/components/MainPageComponent/AnalyticsComponent/QuestionComponent/Questions.module.css
@@ -1,3 +1,10 @@
+*{
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
+
 .questionsComponent {
     display: flex;
     width: 80vw;
@@ -6,6 +13,17 @@
 
     align-items: center;
     flex-direction: column;
+    overflow-y: auto;
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    
 }
 
 .heading {
@@ -40,7 +58,7 @@
     width: 80%;
     max-height: 550px;
     /* Set a fixed height for the container */
-    overflow-y: auto;
+    /* overflow-y: auto; */
     /* Enable vertical scrolling when necessary */
 }
 
